work with start dates

--- a/frontend_templates/interview_q/validate.html
+++ b/frontend_templates/interview_q/validate.html
@@ -28,6 +28,9 @@
                             </div>
                         {% endfor %}
                     </div>
+                    <div class="row">
+                            <a href="/questions/answer" class="go-back-button">Go Back To Questions</a>
+                        </div>
                     </div>
                 </div>
             {% else %}
