--- a/frontend_templates/interview_q_instance/browse.html
+++ b/frontend_templates/interview_q_instance/browse.html
@@ -9,26 +9,58 @@
     <div class="row">
         <div class="col-sm-12">
              {% if user.is_authenticated %}
-                <h1 class="page-title">Interview Questions Unanswered:</h1>
+                <div class="row">
+                    <h1 class="page-title">Interview Questions Unanswered:</h1>
+                </div>
                 <div class="container">
-                    <div class="row">
-                        {% for question in questions %}
-                            <div class="col-md-4">
-                                <div class="card mb-4 box-shadow">
-                                <div class="card-body">
-                                    <center>
-                                    <p class="card-text question-card-title">{{ question.base_question.name }}</p>
-                                    <p>Start Time: {{ question.start_time }}</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Answer</a>
+                    <!-- Preview -->
+                    <div class="question-section">
+                        <div class="row">
+                            <h2 class="question-row-title">Preview Questions:</h2>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            {% for question in preview_questions %}
+                                <div class="col-md-4">
+                                    <div class="card mb-4 box-shadow">
+                                    <div class="card-body">
+                                        <center>
+                                        <p class="card-text question-card-title">{{ question.base_question.name }}</p>
+                                        <p>Start Time: {{ question.start_time }}</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Answer</a>
+                                        </div>
+                                        </center>
                                     </div>
-                                    </center>
+                                    </div>
                                 </div>
-                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <!-- Available -->
+                    <div class="question-section">
+                            <div class="row">
+                                <h2 class="question-row-title">Answer Questions:</h2>
                             </div>
-                        {% endfor %}
-                    </div>
-                    </div>
+                            <hr />
+                            <div class="row">
+                                {% for question in available_questions %}
+                                    <div class="col-md-4">
+                                        <div class="card mb-4 box-shadow">
+                                        <div class="card-body">
+                                            <center>
+                                            <p class="card-text question-card-title">{{ question.base_question.name }}</p>
+                                            <p>Start Time: {{ question.start_time }}</p>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Answer</a>
+                                            </div>
+                                            </center>
+                                        </div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
                 </div>
             {% else %}
                 {% include "no_auth.html" %}
