--- a/frontend_templates/interview_q/send.html
+++ b/frontend_templates/interview_q/send.html
@@ -21,6 +21,39 @@
     </form>
 </div>
 </center>
+<script>
+$.fn.setNow = function (onlyBlank) {
+var now = new Date($.now())
+  , year
+  , month
+  , date
+  , hours
+  , minutes
+  , seconds
+  , formattedDateTime
+  ;
+
+year = now.getFullYear();
+month = now.getMonth().toString().length === 1 ? '0' + (now.getMonth() + 1).toString() : now.getMonth() + 1;
+date = now.getDate().toString().length === 1 ? '0' + (now.getDate()).toString() : now.getDate();
+hours = now.getHours().toString().length === 1 ? '0' + now.getHours().toString() : now.getHours();
+minutes = now.getMinutes().toString().length === 1 ? '0' + now.getMinutes().toString() : now.getMinutes();
+
+formattedDateTime = year + '-' + month + '-' + date + 'T' + hours + ':' + minutes;
+
+if ( onlyBlank === true && $(this).val() ) {
+  return this;
+}
+
+$(this).val(formattedDateTime);
+
+return this;
+}
+$(function () {
+    $('input[type="datetime-local"]').setNow();
+
+});
+</script>
 {% else %}
     {% include "no_auth.html" %}
 {% endif %} 
