--- a/frontend_templates/results/submission.html
+++ b/frontend_templates/results/submission.html
@@ -29,6 +29,10 @@
                                 </div>
                             </div>
                         {% endfor %}
+                       
+                    </div>
+                    <div class="row">
+                        <a href="/questions/answer" class="go-back-button">Go Back To Questions</a>
                     </div>
                     </div>
                 </div>
