--- a/frontend_templates/interview_q/send.html
+++ b/frontend_templates/interview_q/send.html
@@ -16,7 +16,9 @@
       <label for="email">Interviewee Email address</label>
       <input type="email" id="email" name="email" class="form-control" placeholder="Interviewee Email address" required autofocus><br />
       <label for="start_date">Interview Start Date</label>
-      <input class="form-control" type="datetime-local" name="start_date"><br />
+      <input class="form-control" type="datetime-local" name="start_date" id="start_date"><br />
+      <label for="start_date">Interview Expiration Date</label>
+      <input class="form-control" type="datetime-local" name="expiration_date" id="expiration_date"><br />
       <button class="btn btn-lg btn-primary btn-block" type="submit">Send Interview Question</button>
     </form>
 </div>
@@ -49,8 +51,38 @@ $(this).val(formattedDateTime);
 
 return this;
 }
+
+$.fn.setOneWeek = function (onlyBlank) {
+var now = new Date($.now() + 7 * 24 * 60 * 60 * 1000)
+  , year
+  , month
+  , date
+  , hours
+  , minutes
+  , seconds
+  , formattedDateTime
+  ;
+
+year = now.getFullYear();
+month = now.getMonth().toString().length === 1 ? '0' + (now.getMonth() + 1).toString() : now.getMonth() + 1;
+date = now.getDate().toString().length === 1 ? '0' + (now.getDate()).toString() : now.getDate();
+hours = now.getHours().toString().length === 1 ? '0' + now.getHours().toString() : now.getHours();
+minutes = now.getMinutes().toString().length === 1 ? '0' + now.getMinutes().toString() : now.getMinutes();
+
+formattedDateTime = year + '-' + month + '-' + date + 'T' + hours + ':' + minutes;
+
+if ( onlyBlank === true && $(this).val() ) {
+  return this;
+}
+
+$(this).val(formattedDateTime);
+
+return this;
+}
+
 $(function () {
-    $('input[type="datetime-local"]').setNow();
+    $('#start_date').setNow();
+    $('#expiration_date').setOneWeek();
 
 });
 </script>
