Redesign of answer page

--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="col-md-6">
                         <p class="step-description">In this step, provide a name for your question and a description detailing what the user has to do. 
-                               Indicate the programming language of your question along with whether or not you want this question to be viewed and attempted by all users on the site.                               
+                               Indicate the programming language of your question along with whether or not you want this question to be viewed and attempted by all users on the site. Markdown is supported.                            
                         </p>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col-md-6">
                         <p class="step-description">In this step, you will declare what methods are available to the user when they submit. For instance, you may have a function that you do not want 
-                            the user to see the implementation of but still want it to be used in their solution. Outline what those functions are here along with a general description of your API.
+                            the user to see the implementation of but still want it to be used in their solution. Outline what those functions are here along with a general description of your API.  Markdown is supported.
                         </p>
                     </div>
                 </div>
