--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -50,7 +50,7 @@
                         <div class="col-md-6">
                             <p class="step-description">In this step, provide a name for your question. 
                                     Additionally, provide the description of what the user has to do .
-                                    This description will show up to the user.
+                                    This description will show up to the user. Markdown is supported.
                             </p>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="col-md-6">
                             <p class="step-description">In this step, you will declare what methods are available to the user via the API.
-                                 For example, you might declare that the return_value function is available to them.
+                                 For example, you might declare that the return_value function is available to them. Markdown is supported.
                             </p>
                         </div>
                     </div>
@@ -251,7 +251,7 @@ to the user with a @visible @not_visible annotation</span>
                     </div>
                     <!-- end step -->
                     <br /><br />
-                    <center><button class="btn btn-success create-button" type="submit">Create Interview Question</button></center>
+                    <center><button class="btn btn-success create-button" type="submit">Edit Interview Question</button></center>
                 </form>
             </div>
     </div>
