--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -30,16 +30,23 @@
     <div class="row">
       <div class="col-lg-6 mb-6 left-section">
         <div class="about-section">
-          <h3 class="about-section-header">Do Interviews That Matter</h3>
+          <h3 class="about-section-header">Candidates,<br><br> Do Interviews That Matter</h3>
           <p class="about-section-text">Stop wasting your time doing algorithm interviews. You have spent your career creating impressive personal projects, tackling difficult challenges, and having invaluable industry experience. Your next programming opportunity will allow you to grow and develop even more. There’s only one problem that is stopping you from this dream job. Your college algorithms class. Do problems that you will encounter in the real world.</p>
         </div>
       </div>
       <div class="col-lg-6 mb-6 right-section">
           <div class="about-section">
-            <h3 class="about-section-header">Prepare For Your Job. For Real.</h3>
-            <p class="about-section-text">It’s no secret that your job most likely won’t be coming up and implementing creative ways to find the longest palindrome substring. You are going to be a given a code base and a prompt and you need to get going. Practice designing and implementing real systems.</p>
+            <h3 class="about-section-header">Interviewers,<br><br> Offer Candidates High Signal Interview Questions</h3>
+            <p class="about-section-text">Want to know how a potential candidate would perform in the job? Why not give them a challenge similar to what they would experience? 
+              Why waste time giving algorithm questions? Get the most signal now.</p>
           </div>
       </div>
+    </div>
+    <div class="row offer-section">
+        <h3 class="col-md-12 offer-section-header">What We Offer</h3>
+        <div class="col-md-4 offer-item">Integrated Problems</div>
+        <div class="col-md-4 offer-item">Total Control</div>
+        <div class="col-md-4 offer-item">Library Security</div>
     </div>
     <div class="open-questions">
       <h1 class="open-questions-title">Explore Example Questions</h1>
